--- a/app/static/index.html
+++ b/app/static/index.html
@@ -10,31 +10,31 @@
   </head>
   <body>
     <!-- Menu -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid d-flex">
-        <a class="navbar-brand" href="https://tsv-thedinghausen.de">
-          <img src="img/erbhoflauflogo-1.png" alt="" width="60%" height="auto">
-        </a>
+          <a class="navbar-brand" href="https://tsv-thedinghausen.de">
+            <img class="menu-img" src="img/erbhoflauflogo-1.png" alt="">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-          <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="index.html">Startseite</a>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="index.html">Startseite</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="lauf.html">Strecke & Infos</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="lauf.html">Strecke & Infos</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="#">Fotos</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="#">Fotos</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="#">Anmeldung</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="#">Anmeldung</a>
-                </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" aria-current="page" href="#">Ergebnisse</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" aria-current="page" href="#">Ergebnisse</a>
                 </li>
             </div>
           </div>
