--- a/app/static/lauf.html
+++ b/app/static/lauf.html
@@ -10,31 +10,31 @@
   </head>
   <body>
     <!-- Menu -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid d-flex">
-        <a class="navbar-brand" href="https://tsv-thedinghausen.de">
-          <img src="img/erbhoflauflogo-1.png" alt="" width="60%" height="auto">
-        </a>
+          <a class="navbar-brand" href="https://tsv-thedinghausen.de">
+            <img class="menu-img" src="img/erbhoflauflogo-1.png" alt="">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-          <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item me-5">
-                    <a class="nav-link fw-bold fs-2" href="index.html">Startseite</a>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="index.html">Startseite</a>
                   </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="#">Strecke & Infos</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="lauf.html">Strecke & Infos</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="#">Fotos</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="#">Fotos</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" href="#">Anmeldung</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" href="#">Anmeldung</a>
                 </li>
-                <li class="nav-item me-5">
-                  <a class="nav-link fw-bold fs-2" aria-current="page" href="#">Ergebnisse</a>
+                <li class="nav-item">
+                  <a class="nav-link fw-bold fs-3" aria-current="page" href="#">Ergebnisse</a>
                 </li>
             </div>
           </div>
@@ -47,7 +47,7 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-8">
                     <div class="container">
                         <h2>Die Strecke</h2>
                         <p>
@@ -55,19 +55,27 @@
                             Die Streckenführung lässt dich Thedinghausen, wie in den letzten Jahren auch, in seiner ganzen Vielfalt erleben.<br>
                             Ob den Ortskern mit Rathaus und Kirche sowie das idylische Eyter Naherholungsgebiet, der Gudewill-Schule oder gemütlichen Wohnvierteln, du erlebst Thedinghausen auf alle Fälle live, in seiner ganzen Lebendigkeit mit enthusiastischen Zuschauern und kunterbunt!
                         </p>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="container pt-5">
+                        <img class="medal-img" src="img/medal.jpg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <div class="container">
                         <p><b>Die Startzeiten:</b></p>
                         <ul>
                             <li><b>11:00 Uhr - 900m Löwenlauf</b></li>
                             <li><b>12:15 Uhr - 5km</b></li>
                             <li><b>13:15 Uhr - 10km</b></li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="container">
-                        <img src="img/medal.jpg" alt="" width="50%" height="auto">
-                    </div>
-                </div>
+                      </div>
+                      
+              </div>
             </div>
         </div>
     </div>
@@ -76,37 +84,37 @@
             <div class="accordion" id="accordionInfo">
                 <div class="accordion-item">
                   <h1 class="accordion-header" id="anmeldung">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAnmeldung" aria-expanded="true" aria-controls="collapseAnmeldung">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAnmelden" aria-expanded="false" aria-controls="collapseAnmelden">
                       Anmeldung & Preise
                     </button>
                   </h1>
-                  <div id="collapseAnmeldung" class="accordion-collapse collapse" aria-labelledby="anmeldung" data-bs-parent="#accordionInfo">
+                  <div id="collapseAnmelden" class="accordion-collapse collapse" aria-labelledby="anmeldung" data-bs-parent="#accordionInfo">
                     <div class="accordion-body">
-                        <table class="table table-light">
-                            <thead>
-                              <tr>
-                                <th scope="col"></th>
-                                <th scope="col">5km</th>
-                                <th scope="col">10km</th>
-                                <th scope="col">Löwenlauf</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <th scope="row">Normal</th>
-                                <td>7€</td>
-                                <td>7€</td>
-                                <td>2€</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Ermäßigt (U12- U20)</th>
-                                <td>5€</td>
-                                <td>5€</td>
-                                <td>2€</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        <p>Bis zum 05. Okt., für Nachmelder bis 60 min vor dem jeweiligen Lauf vor Ort zzgl. 3,00 €</p>
+                      <table class="table table-light">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col">5km</th>
+                            <th scope="col">10km</th>
+                            <th scope="col">Löwenlauf</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">Normal</th>
+                            <td>7€</td>
+                            <td>7€</td>
+                            <td>2€</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Ermäßigt (U12- U20)</th>
+                            <td>5€</td>
+                            <td>5€</td>
+                            <td>2€</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    <p>Bis zum 05. Okt., für Nachmelder bis 60 min vor dem jeweiligen Lauf vor Ort zzgl. 3,00 €</p>
                     </div>
                   </div>
                 </div>
