--- a/app/static/lauf.html
+++ b/app/static/lauf.html
@@ -12,9 +12,11 @@
     <!-- Menu -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <div class="container-fluid d-flex">
+          <div class="col-sm-2">
           <a class="navbar-brand" href="https://tsv-thedinghausen.de">
-            <img class="menu-img" src="img/erbhoflauflogo-1.png" alt="">
+            <img class="title-img" src="img/erbhoflauflogo-1.png" alt="">
           </a>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -244,50 +246,32 @@
         </div>
       </div>
     </div>
-      <footer class="container-fluid">
-        <div class="row footer-content">
-          <div class="col-sm-3">
-            <h5>Kontakt</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Kontakt</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Feedback</a></li>
-            </ul>
+    <footer class="container-fluid pt-5">
+      <div class="row footer-content py-4">
+          <div class="col-sm-4 d-flex align-items-center justify-content-center">
+            <a href="#" class="nav-link p-0 text-muted">Kontakt</a>
+          </div>          
+          <div class="col-sm-4 d-flex align-items-center justify-content-center">
+            <a href="#" class="nav-link p-0 text-muted">Impressum</a>
           </div>
-          
-          <div class="col-sm-3">
-            <h5>Rechtliches</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">AGB</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Impressum</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Datenschutz</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Widerrufsbelehrung</a></li>
-            </ul>
-          </div>
-    
-          <div class="col-sm-3 offset-1">
-            <form>
-              <h5>Abonniere unseren Newsletter</h5>
-              <p>Bleibe auf dem Laufenden und bekomme stets die neuesten Informationen</p>
-              <div class="d-flex w-100 gap-2">
-                <label for="newsletter1" class="visually-hidden">Emailadresse</label>
-                <input id="newsletter1" type="text" class="form-control" placeholder="Emailadresse">
-                <button class="btn" type="button">Subscribe</button>
-              </div>
-            </form>
+          <div class="col-sm-4 d-flex align-items-center justify-content-center">
+            <a href="#" class="nav-link p-0 text-muted">Datenschutz</a>
           </div>
         </div>
-        <div class="row">
-          <div class="d-flex justify-content-between bg-dark">
-            <p>© Copyright 2022 Schloss Erbhoflauf</p>
-            <div class="col-1">
-              <p class="fw-bold">Folge Uns</p>
-              <ul class="list-unstyled d-flex">
-                <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
-                <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-              </ul>
-          </div>
+      </div>
+    <div class="row">
+      <div class="d-flex bg-dark">
+        <div class="p-2 flex-grow-1 justify-content-center"><p>© Copyright 2022 Schloss Erbhoflauf</p></div>
+        <div class="p-2">
+          <p class="fw-bold">Folge Uns</p>
+          <ul class="list-unstyled d-flex">
+            <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
+            <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+          </ul>
         </div>
-      </footer>
+      </div>
+    </div>
+  </footer>
     </body>
 </html>
 
