--- a/app/static/lauf.html
+++ b/app/static/lauf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Schloss Erbhoflauf</title>
+    <title>Schloss Erbhoflauf Informationen</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -252,25 +252,25 @@
             <a href="#" class="nav-link p-0 text-muted">Kontakt</a>
           </div>          
           <div class="col-sm-4 d-flex align-items-center justify-content-center">
-            <a href="#" class="nav-link p-0 text-muted">Impressum</a>
+            <a href="impressum.html" class="nav-link p-0 text-muted">Impressum</a>
           </div>
           <div class="col-sm-4 d-flex align-items-center justify-content-center">
             <a href="#" class="nav-link p-0 text-muted">Datenschutz</a>
           </div>
         </div>
       </div>
-    <div class="row">
-      <div class="d-flex bg-dark">
-        <div class="p-2 flex-grow-1 justify-content-center"><p>© Copyright 2022 Schloss Erbhoflauf</p></div>
-        <div class="p-2">
-          <p class="fw-bold">Folge Uns</p>
-          <ul class="list-unstyled d-flex">
-            <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
-            <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-          </ul>
+      <div class="row">
+        <div class="d-flex bg-dark justify-content-between align-items-center">
+          <div class="px-5 my-auto"><p>© Copyright 2022 Schloss Erbhoflauf</p></div>
+          <div class="px-5 my-auto">
+            <p class="fw-bold">Folge Uns</p>
+            <ul class="list-unstyled d-flex">
+              <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
+              <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
     </body>
 </html>
