--- a/app/static/lauf.html
+++ b/app/static/lauf.html
@@ -33,7 +33,7 @@
                   <a class="nav-link fw-bold fs-3" href="#">Fotos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" href="#">Anmeldung</a>
+                  <a class="nav-link fw-bold fs-3" href="anmeldung.html">Anmeldung</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link fw-bold fs-3" aria-current="page" href="#">Ergebnisse</a>
