--- a/app/static/ergebnisse.html
+++ b/app/static/ergebnisse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Schloss Erbhoflauf Impressum</title>
+    <title>Schloss Erbhoflauf</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,78 +45,40 @@
     <!-- Title bar-->
     <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der nächste Lauf startet am 09.10.2022</div>
     <!-- Content-->
-    <div class="container">
-
-      <div class="row p-5 bg-light">
-          <h2>IMPRESSUM</h2>
-          <div class="col-sm-6">
-              <h5>Veranstalter</h5>
-              <p>
-                  TSV Thedinghausen von 1904 e.V.<br>
-                  Vorsitzende Angela Humpich<br>
-                  Bromberger Straße 8<br>
-                  27321 Thedinghausen<br><br>
-                  Tel.: +49 (0) 4204 – 55 79<br>
-                  E-Mail: vorstand@tsv-thedinghausen.de
-              </p>
-              <h5>Gemeinschaftlich Vertretungsberechtigt:</h5>
-              <p>
-                  1. Vorsitzende:<br>
-                  Angela Humpich<br>
-                  Bromberger Str. 8<br>
-                  27321 Thedinghausen<br>
-                  <br>
-                  Tel: +49 (0) 4204 – 55 79<br>
-                  E-Mail: vorstand@tsv-thedinghausen.de<br>
-                  <br>
-                  2. Vorsitzender:<br>
-                  Jan Steffens<br>
-                  Georg-Gröning- Str. 11<br>
-                  28209 Bremen<br>
-                  <br>
-                  Tel.: +49 (0) 172/4455104
-              </p>
-          </div>
-          <div class="col-sm-6">
-              <p><b>Registergericht:</b>Amtsgericht Walsrode<br>
-              <b>Registernummer:</b>VR 120054<br><br>
-              <b>Umsatzsteuer-Identifikationsnummer:</b><br>
-              48/214/00692<br><br>
-              <b>V.i.S.d § 55 Abs. 2 RStV:</b>
-              Angela Humpich<br>
-              Bromberger Str. 8<br>
-              27321 Thedinghausen<br>
-
-          </p>
-          </div>
-      </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="btn-group-vertical" role="group" aria-label="Basic example">
+                <a type="button" class="btn btn-primary" href="Gesamtergebnis2019.html">Ergebnisse 2019</a>
+                <a type="button" class="btn btn-primary">Ergebnisse 2022</a>
+              </div>
+        </div>
     </div>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid pt-5">
         <div class="row footer-content py-4">
             <div class="col-sm-4 d-flex align-items-center justify-content-center">
               <a href="#" class="nav-link p-0 text-muted">Kontakt</a>
             </div>          
             <div class="col-sm-4 d-flex align-items-center justify-content-center">
-              <a href="#" class="nav-link p-0 text-muted">Impressum</a>
+              <a href="impressum.html" class="nav-link p-0 text-muted">Impressum</a>
             </div>
             <div class="col-sm-4 d-flex align-items-center justify-content-center">
               <a href="#" class="nav-link p-0 text-muted">Datenschutz</a>
             </div>
           </div>
         </div>
-      <div class="row">
-        <div class="d-flex bg-dark justify-content-between align-items-center">
-          <div class="px-5 my-auto"><p>© Copyright 2022 Schloss Erbhoflauf</p></div>
-          <div class="px-5 my-auto">
-            <p class="fw-bold">Folge Uns</p>
-            <ul class="list-unstyled d-flex">
-              <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
-              <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-            </ul>
+        <div class="row">
+          <div class="d-flex bg-dark justify-content-between align-items-center">
+            <div class="px-5 my-auto"><p>© Copyright 2022 Schloss Erbhoflauf</p></div>
+            <div class="px-5 my-auto">
+              <p class="fw-bold">Folge Uns</p>
+              <ul class="list-unstyled d-flex">
+                <li class="ms-3"><a class="link-dark" href="https://www.facebook.com/tselauf/"><img src="img/2021_Facebook_icon.svg.png" alt="" width="24" height="24"></a></li>
+                <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
     </footer>
   </body>
 </html>
