--- a/app/static/index.html
+++ b/app/static/index.html
@@ -8,11 +8,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/erbhof_style.css">
   </head>
-  <body>
+  <body class="bg-light">
     <!-- Menu -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <div class="container-fluid d-flex">
-        <div class="col-sm-2">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <div class="col-sm-2 pe-5">
           <a class="navbar-brand" href="https://tsv-thedinghausen.de">
             <img class="title-img" src="img/erbhoflauflogo-1.png" alt="">
           </a>
@@ -20,23 +20,23 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <div class="navbar-nav">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" href="index.html">Startseite</a>
+                <li class="nav-item title-nav-item">
+                  <a class="nav-link text-reset text-nowrap title-nav-link" href="index.html">Startseite</a>
                   </li>
-                <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" href="lauf.html">Strecke & Infos</a>
+                <li class="nav-item title-nav-item">
+                  <a class="nav-link text-reset text-nowrap title-nav-link" href="lauf.html">Strecke & Infos</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" href="#">Fotos</a>
+                <li class="nav-item title-nav-item">
+                  <a class="nav-link text-reset text-nowrap title-nav-link" href="#">Fotos</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" href="anmeldung.html">Anmeldung</a>
+                <li class="nav-item title-nav-item">
+                  <a class="nav-link text-reset text-nowrap title-nav-link" href="anmeldung.html">Anmeldung</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link fw-bold fs-3" aria-current="page" href="#">Ergebnisse</a>
+                <li class="nav-item title-nav-item">
+                  <a class="nav-link text-reset text-nowrap title-nav-link" aria-current="page" href="ergebnisse.html">Ergebnisse</a>
                 </li>
             </div>
           </div>
