--- a/app/static/anmeldung.html
+++ b/app/static/anmeldung.html
@@ -84,6 +84,10 @@
                 <option>900m Löwenlauf</option>
               </select>
             </div>
+            <div class="col-md-3">
+              <label for="inputMail" class="form-label"><b>E-Mail</b></label>
+              <input type="text" class="form-control" id="inputMail">
+            </div>
             <div class="col-12">
               <button type="submit" class="btn btn-primary">Abschicken</button>
             </div>
