--- a/app/static/ergebnisse.html
+++ b/app/static/ergebnisse.html
@@ -47,10 +47,17 @@
     <!-- Content-->
     <div class="container mt-5">
         <div class="row">
-            <div class="btn-group-vertical" role="group" aria-label="Basic example">
-                <a type="button" class="btn btn-primary" href="Gesamtergebnis2019.html">Ergebnisse 2019</a>
-                <a type="button" class="btn btn-primary">Ergebnisse 2022</a>
-              </div>
+            <div class="container d-flex justify-content-center">
+                <div class="col-sm-2">
+                    <div class="btn-group-vertical" role="group" aria-label="ergebnisseGroup">
+                        <div class="d-grid gap-3">
+                            <a type="button" class="btn" href="Gesamtergebnis2019.html">Ergebnisse 2019</a>
+                            <a type="button" class="btn">Ergebnisse 2022</a>
+    
+                        </div>
+                      </div>
+                </div>
+            </div>
         </div>
     </div>
 
