--- a/app/static/anmeldung.html
+++ b/app/static/anmeldung.html
@@ -29,12 +29,12 @@
                 <li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="lauf.html">Strecke & Infos</a>
                 </li>
-                <li class="nav-item title-nav-item">
+                <!--li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="#">Fotos</a>
-                </li>
-                <li class="nav-item title-nav-item">
+                </li-->
+                <!--li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="anmeldung.html">Anmeldung</a>
-                </li>
+                </li-->
                 <li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" aria-current="page" href="ergebnisse.html">Ergebnisse</a>
                 </li>
