--- a/app/static/impressum.html
+++ b/app/static/impressum.html
@@ -29,12 +29,12 @@
                 <li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="lauf.html">Strecke & Infos</a>
                 </li>
-                <li class="nav-item title-nav-item">
+                <!--li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="#">Fotos</a>
-                </li>
-                <li class="nav-item title-nav-item">
+                </li-->
+                <!--li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" href="anmeldung.html">Anmeldung</a>
-                </li>
+                </li-->
                 <li class="nav-item title-nav-item">
                   <a class="nav-link text-reset text-nowrap title-nav-link" aria-current="page" href="ergebnisse.html">Ergebnisse</a>
                 </li>
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <!-- Title bar-->
-    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der nächste Lauf startet am 09.10.2022</div>
+    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der Thänhuser Schloss Erbhof-Lauf Lauf startet am 08.10.2023</div>
     <!-- Content-->
     <div class="container">
 
