Listening port as cli argment

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <!-- Title bar-->
-    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der Thänhuser Schloss Erbhof-Lauf Lauf startet am 08.10.2023</div>
+    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der 8. Thänhuser Schloss Erbhof-Lauf startet am 08.10.2023</div>
     <!-- Content-->
     <div class="container mt-5">
       <div class="row">
