--- a/app/static/anmeldung.html
+++ b/app/static/anmeldung.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <!-- Title bar-->
-    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der nächste Lauf startet am 09.10.2022</div>
+    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der 8. Thänhuser Schloss Erbhof-Lauf startet am 08.10.2023</div>
     <!-- Content-->
     <div class="container mt-5">
         <h2>Anmeldung</h2>
