--- a/app/static/ergebnisse.html
+++ b/app/static/ergebnisse.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <!-- Title bar-->
-    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der Thänhuser Schloss Erbhof-Lauf Lauf startet am 08.10.2023</div>
+    <div class="d-flex p-2 bd-highlight justify-content-center title-bar">Der 8. Thänhuser Schloss Erbhof-Lauf startet am 08.10.2023</div>
     <!-- Content-->
     <div class="container mt-5">
         <div class="row">
@@ -52,7 +52,7 @@
                     <div class="btn-group-vertical" role="group" aria-label="ergebnisseGroup">
                         <div class="d-grid gap-3">
                             <a type="button" class="btn" href="Gesamtergebnis2019.html">Ergebnisse 2019</a>
-                            <a type="button" class="btn">Ergebnisse 2022</a>
+                            <a type="button" class="btn" href="Gesamtergebnis2022.html">Ergebnisse 2022</a>
     
                         </div>
                       </div>
